force-app/main/default/objects/Teacher__c/fields/ID__c.field-meta.xml
<CustomField>
    <fullName>ID__c</fullName>
    <displayFormat>TID-{0000}</displayFormat>
    <label>ID</label>
    <type>AutoNumber</type>
</CustomField>