force-app/main/default/objects/Teacher__c/fields/Subject__c.field-meta.xml
<CustomField>
    <fullName>Subject__c</fullName>
    <label>Subject</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Biology</fullName>
            </value>
            <value>
                <fullName>Chemistry</fullName>
            </value>
            <value>
                <fullName>English</fullName>
            </value>
            <value>
                <fullName>Geography</fullName>
            </value>
            <value>
                <fullName>Hindi</fullName>
            </value>
            <value>
                <fullName>History</fullName>
            </value>
            <value>
                <fullName>Math</fullName>
            </value>
            <value>
                <fullName>Science</fullName>
            </value>
            <value>
                <fullName>Social science</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>