force-app/main/default/objects/Teacher__c/validationRules/Salary_validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_validation</fullName>
    <active>true</active>
    <errorConditionFormula>Salary__c&lt;0</errorConditionFormula>
    <errorDisplayField>Salary__c</errorDisplayField>
    <errorMessage>Salary can&apos;t be negative!</errorMessage>
</ValidationRule>